# script_making_common

./: .gitignore  README.md
doc/: USER_GUIDE.md
src/discovery/: startup_discovery.py
src/ui/: __init__.py  workers.py
src/ui/dialogs/: scalar_modifiers.py
src/ui/mixins/: discovery_mixin.py
src/ui/tabs/: registers_tab.py
src/utils/: _simple_dataframe.py  log_setup.py  mock_backend.py  watchdog.py
tests/: test_cli_mock.py  test_curve_engine_mock.py  test_data_export_basic.py  test_platform_discovery.py  test_startup_discovery.py  test_validators.py
v2.2/: README.md  pyproject.toml
v2.2/.github/workflows/: ci.yml
v2.2/doc/: INTEGRATION_GUIDE.md
v2.2/src/: platform_config.json  vf_curve_manager.py  vf_curve_manager_cli.py  vf_discovery_cache.json  vf_domains.json
v2.2/src/discovery/: auto_discover_vf_registers.py  discovery_core.py
v2.2/src/ui/mixins/: domain_mixin.py
v2.2/src/utils/: __init__.py  constants.py  hardware_access.py
v2.2/tests/: conftest.py  test_cli_commands_full.py  test_cli_integration.py  test_constants.py  test_curve_manager_ui.py  test_qt_widgets.py
validators/: __init__.py  email_validator.py  numeric_validators.py  string_validators.py  url_validator.py
vf_curve_manager/v2.2/doc/: DEVELOPER_REFERENCE.md  QUICK_REFERENCE.txt
vf_curve_manager/v2.2/src/: vf_curve_manager_cli.py  vf_discovery_cache.json
vf_curve_manager/v2.2/src/core/: __init__.py  config_loader.py  platform_discovery.py
vf_curve_manager/v2.2/src/discovery/: __init__.py  discovery_core.py  discovery_learn.py  startup_discovery.py
vf_curve_manager/v2.2/src/ui/: curve_manager_ui.py
vf_curve_manager/v2.2/src/ui/mixins/: __init__.py  discovery_mixin.py  progress_mixin.py
vf_curve_manager/v2.2/src/ui/tabs/: __init__.py  result_tabs.py
vf_curve_manager/v2.2/src/utils/: data_export.py  fuse_io.py
vf_curve_manager/v2.2/tests/: test_log_setup.py
vf_curve_manager/v2_2/: .gitignore  requirements.txt  run_cli.bat  run_vf_curve_manager_ui.bat
vf_curve_manager/v2_2/doc/: PLATFORM_MIGRATION_GUIDE.md
vf_curve_manager/v2_2/src/: fuse_spec_db.json  platform_config.json  vf_curve_manager.py  vf_curve_manager_cli.py  vf_discovery_cache.json  vf_domains.json
vf_curve_manager/v2_2/src/core/: config_loader.py  curve_engine.py
vf_curve_manager/v2_2/src/discovery/: discovery_core.py  discovery_learn.py  spec_db.py  spec_db_refresh_helper.py  startup_discovery.py
vf_curve_manager/v2_2/src/ui/: curve_manager_ui.py
vf_curve_manager/v2_2/src/ui/dialogs/: __init__.py
vf_curve_manager/v2_2/src/ui/mixins/: discovery_mixin.py  operations_mixin.py  theme_mixin.py
vf_curve_manager/v2_2/src/ui/tabs/: registers_tab.py
vf_curve_manager/v2_2/src/utils/: _boot_stats.py  conversions.py  fuse_io.py  hardware_access.py  itp_recovery.py  process_utils.py  session_cleanup.py  spec_db_request.json  spec_query_for_copilot.txt
vf_curve_manager/v2_2/tests/: conftest.py  test_cli_commands_full.py  test_config_loader.py  test_conversions_full.py  test_discovery_resume.py  test_hardware_access_mock.py  test_mock_backend.py  test_process_utils.py  test_watchdog.py
