# =============================================================================
# pyproject.toml — VF Curve Manager Tool v2.2
# =============================================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "vf-curve-manager"
version = "2.2.0"
description = "Read, edit, and audit VF (voltage-frequency) curves on Intel SUT hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary — Intel BDC CVE Labs" }

# Runtime dependencies (PyQt5 is optional — CLI works without it)
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.9",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "tabulate>=0.8.9",
    "colorama>=0.4.4",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
ui = [
    "PyQt5>=5.15.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "PyQt5>=5.15.0",
]

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts          = "--tb=short -q"
qt_api           = "pyqt5"
filterwarnings   = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
# Coverage runs only when --cov is passed explicitly (e.g. in CI).
# Override with  pytest --no-cov  for fast local iteration.

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["src"]
branch   = true
omit     = [
    # Backward-compat shim — no logic of its own
    "src/discovery/auto_discover_vf_registers.py",
    # Hardware-only: ITP fuse write / recovery flows — cannot run in mock mode
    "src/utils/fuse_io.py",
    "src/utils/itp_recovery.py",
    # Entry-points tested via subprocess; import-level coverage is never collected
    "src/vf_curve_manager_cli.py",
    "src/vf_curve_manager.py",
    # Byte-code cache
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
# Gate covers only the mockable, import-testable source files.
# fuse_io, itp_recovery, and both entry-points are omitted above because
# they require real ITP hardware or are exercised via subprocess (not import).
fail_under     = 30
exclude_lines  = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "except ImportError",
]
